newInstanceの警告対応